# DDOs

./: .gitignore  AGENTS.md  README.md  main.py  mix.exs  package-lock.json  redstone.py  redstone_blocks.py  redstone_python_sim.py  tables.sql  test_redstone_blocks.py
blockworld/: README.md  main.py  pyproject.toml  requirements.txt
blockworld/blockworld/: __init__.py  app.py  constants.py  params.py
blockworld/blockworld/systems/: __init__.py  block_manager.py  brain.py  cells.py  fields.py  redstone.py
blockworld/blockworld/ui/: __init__.py  block_popup.py  extended_hud.py  field_selector.py  simple_dropdown.py
redstone/: README.md  __init__.py  __main__.py  block.py  codex3d_bridge.py  core.py  demo.py  engine.py  group.py  gui.py  main.py  message.py  mouse.py  packet.py  requirements.txt  ui.py  world.py
redstone/tests/: test_codex3d_bridge.py  test_core.py  test_redstone.py  test_view3d.py
redstone/view3d/: __init__.py  __main__.py  colors_util.py  hud.py  minecraft_app.py  minecraft_fp.py  textures.py  voxel_renderer.py
tests/: test_sonnet3d_integration.py
